<?xml version="1.0" encoding="utf-8"?>
<!-- vue 'principale', point d'accès à l'application qui permet de s'y connecter -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gravity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <!-- Logo de l'application -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/medium_size"
        app:srcCompat="@mipmap/ic_banner_foreground"
        tools:srcCompat="@mipmap/ic_banner_foreground"
        android:contentDescription="@string/description_logo" />

    <!-- Zone de saisie pour la connexion : identifiant, mot de passe et bouton de connexion -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/connexion_large_horizontal_margin">

        <!-- Zone de saisie et label pour l'identifiant -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_id"/>
        <EditText
            android:id="@+id/fieldLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_id"
            android:inputType="text"
            android:drawableStart="@drawable/baseline_person_24"
            android:autofillHints="" />

        <!-- Zone de saisie et label pour le mot de passe -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_password" />
        <EditText
            android:id="@+id/fieldPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_lock_24"
            android:autofillHints="" />

        <!-- Bouton de connexion -->
        <Button
            android:id="@+id/btnConnexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_connect"
            android:onClick="connection"/>

    </LinearLayout>
</LinearLayout>